# cw-bidding-platform

./: .gitignore  Cargo.toml  README.md
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
src/multitest/: contract.rs  tests.rs
