[package]
name = "cw-bidding-platform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.8"
cw-multi-test = { version = "0.16.1", optional = true }
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cw-multi-test = "0.16.1"

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""
